--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 									<p class="credit"> <strong>Shehbaz Virk</strong> <span>President</span></p>
 								</div>
 								<br>
-									<p>Shehbaz is a cofounder of SportsMED and a sophomore studying MCB and Public Health.</p>
+									<p>Shehbaz is the founder of SportsMED and a sophomore studying MCB and Public Health.</p>
 							</div>
 						</section>
 						<section>
