--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 									</div>
 									<p class="credit"> <strong>Suraj Rajan</strong> <span>Internal VP</span></p>
 								</div><br>
-									<p>Suraj is a molecular and cellular biology major and a cofounder of SportsMED.</p>
+									<p>Suraj is a molecular and cellular biology major and a co-founder of SportsMED.</p>
 							</div>
 						</section>
 						<section>
@@ -164,7 +164,7 @@
 									</div>
 									<p class="credit"> <strong>Nayan Pallegar</strong> <span>External VP</span></p>
 								</div>
-								<br>	<p>Nayan is a cofounder of SportsMED and a molecular and cellular biology major.</p>
+								<br>	<p>Nayan is a co-founder of SportsMED and a molecular and cellular biology major.</p>
 							</div>
 						</section>
 					</div>
@@ -178,7 +178,7 @@
 									</div>
 									<p class="credit"> <strong>Viren Srivastava</strong> <span>Financial VP</span></p>
 								</div>
-								<br><p>Viren is the VP of finance of SportsMED and a molecular and cellular biology major.</p>
+								<br><p>Viren is a co-founder of SportsMED and a molecular and cellular biology major.</p>
 							</div>
 						</section>
 						<section>
@@ -202,7 +202,7 @@
 									</div>
 									<p class="credit"> <strong>Shane Fan</strong> <span>Analytics Lead</span></p>
 								</div>
-								<br><p>Prakash is a computer science, data science, and economics triple major and a cofounder at SportsMED.</p>
+								<br><p>Prakash is a computer science, data science, and economics triple major and a signatory at SportsMED.</p>
 							</div>
 						</section>
 					
