--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
 									<h3>Nutrition Research</h3>
 								</header>
-								<p>NGroundbreaking research in the sports nutrition. Research projects semester long..</p>
+								<p>Groundbreaking research in the sports nutrition. Research projects semester long..</p>
 							</div>
 						</section>
 						<section>
