--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 									</div>
 									<p class="credit"> <strong>Shane Fan</strong> <span>Analytics Lead</span></p>
 								</div>
-								<br><p>Prakash is a computer science, data science, and economics triple major and a signatory at SportsMED.</p>
+								<br><p>Prakash is a computer science, data science, and economics triple major and the analytics lead at SportsMED.</p>
 							</div>
 						</section>
 					
