--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 									<h3>Sports Consulting</h3>
 								</header>
-								<p>Advise sports and live entertainment business leaders on how to profitably grow their businesses and resolve pressing strategic questions.</p>
+								<p>Advising sports and live entertainment business leaders on how to profitably grow their businesses and resolve pressing strategic questions.</p>
 							</div>
 						</section>
 						<section>
@@ -71,7 +71,7 @@
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
 									<h3>Health Research</h3>
 								</header>
-								<p>Groundbreaking research in the medical sports field. Research projects semester long.</p>
+								<p>Staying up to date on the latest advancements in the medical sports field.</p>
 							</div>
 						</section>
 						<section>
@@ -80,7 +80,7 @@
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
 									<h3>Nutrition Research</h3>
 								</header>
-								<p>Groundbreaking research in the sports nutrition. Research projects semester long..</p>
+								<p>Analyzing recent advancements. Reading papers in journals.</p>
 							</div>
 						</section>
 						<section>
